--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="./styles/animation.css">
   <title>Army Game</title>
 </head>
 <body>
@@ -12,7 +13,7 @@
 
     <div id="fundoGame"> <!-- div fundoGame !-->
     
-      <div id="inicio"><h1> Resgate </h1> <!-- div inicio !-->
+      <div id="inicio" onclick="start()"><h1> Resgate </h1> <!-- div inicio !-->
       <p>Utilize a tecla W para movimentar o helicóptero para cima, a tecla S para movimentar o helicóptero para baixo e a tecla D para atirar.</p>
       <p> Clique aqui para iniciar!! </p>
       </div> <!-- Fim da div inicio !-->
@@ -23,5 +24,6 @@
   <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script> -->
   <script src="./js/jquery-1.11.1.min.js"></script>
   <script src="./js/jquery-collision.min.js"></script>
+  <script src="./js/index.js"></script>
 </body>
 </html>
